fix: fix some overflow issues

--- a/api/public/css/entrada.css
+++ b/api/public/css/entrada.css
@@ -8,6 +8,7 @@ body {
     color: #725442;
     font-family: sans-serif;
     height: 100vh;
+    overflow: hidden scroll;
     /* display: flex; */
     justify-content: center;
     align-items: center;
